# rio

./: Cargo.toml  README.md
.github/workflows/: check.yml  safety.yml  test.yml
examples/: Cargo.toml  client_tcp.rs  connect_tcp.rs  counter.rs  echo_tcp.rs  hello_world.rs  timers.rs
rio/: Cargo.toml  LICENSE  README.md
rio-macros/: Cargo.toml  README.md
rio-macros/src/: lib.rs
rio/src/: lib.rs  macros.rs
rio/src/io/: async_read.rs  async_write.rs  flush.rs  interest.rs  mod.rs  read.rs  read_exact.rs  registration.rs  shutdown.rs  write.rs  write_all.rs
rio/src/net/: mod.rs
rio/src/net/tcp/: listener.rs  mod.rs  socket.rs  stream.rs
rio/src/rt/: context.rs  handle.rs  mod.rs  runtime.rs  scheduler.rs
rio/src/rt/io/: driver.rs  epoll.rs  mod.rs  registration.rs
rio/src/rt/io/reactor/: interest.rs  mod.rs  reactor.rs
rio/src/rt/task/: mod.rs  task.rs  waker.rs
rio/src/rt/time/: clock.rs  driver.rs  entry.rs  handle.rs  heap.rs  mod.rs  registration.rs
rio/src/task/: id.rs  join.rs  mod.rs  spawn.rs  yield_now.rs
rio/src/task/coop/: budget.rs  consume.rs  cooperative.rs  mod.rs  proceed.rs  unconstrained.rs
rio/src/time/: interval.rs  mod.rs  sleep.rs  timeout.rs
src/: lib.rs  main.rs
src/io/: async_io.rs  async_read.rs  async_write.rs  mod.rs
src/net/: mod.rs  socket.rs
src/net/tcp/: listener.rs  mod.rs  stream.rs
src/rt/: mod.rs  runtime.rs  scheduler.rs  spawn.rs  task.rs  timer.rs  waker.rs
src/rt/io/: driver.rs  mod.rs
src/rt/task/: core.rs  mod.rs  waker.rs
src/rt/util/: min_heap.rs  mod.rs
src/runtime/: context.rs  handle.rs  mod.rs  runtime.rs
src/runtime/scheduler/: handle.rs  mod.rs  scheduler.rs
src/runtime/task/: id.rs  join.rs  mod.rs  spawn.rs  task.rs  waker.rs  yield_now.rs
src/runtime/time/: driver.rs  entry.rs  handle.rs  heap.rs  mod.rs
src/time/: mod.rs  sleep.rs
src/util/: min_heap.rs  mod.rs
