[package]
name = "rio"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/rio"
description = """
Minimal, single-threaded, asynchronous runtime in Rust.
"""
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[dependencies]
libc = { version = "0.2.176", optional = true }

[features]
default = []
io = ["libc"]
