[package]
name = "rio"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/rio"
description = """
Minimal asynchronous runtime for Rust.
"""
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[dependencies]
