[package]
name = "rio-macros"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/rio"
description = """
`rio` Procedural Macros.
"""
categories = ["asynchronous"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
