[package]
name = "rio"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/rio"
description = """
Minimal Asynchronous Runtime for Rust.
"""
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[features]
# Include nothing.
default = []

# Enable everything.
full = ["macros"]

macros = ["rio-macros"]

[dependencies]
rio-macros = { path = "../rio-macros", optional = true }
