[package]
name = "rio"
version = "0.1.0"
edition = "2024"
authors = ["Huseen Munye"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hmunye/rio"
description = """
Minimal Asynchronous Runtime for Rust.
"""
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[features]
# Enable nothing.
default = []

# Enable everything.
full = ["io", "time", "macros"]

io = ["libc"]
time = []
macros = ["rio-macros"]

[dependencies]
libc = { version = "0.2.184", optional = true }
rio-macros = { path = "../rio-macros", optional = true }
